deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-site
  namespace: wordpress
  labels:
    app: wordpress-site
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress-site
  serviceName: wordpress-site
  template:
    metadata:
      labels:
        app: wordpress-site
    spec:
      containers:
        - name: "wordpress-site"
          image: "wordpress"
          # command: ["/bin/bash", "-c", "--"]
          # args: [ "while true; do sleep 30; done;" ]
          resources:
            limits:
              memory: 1Gi
              cpu: "2"
            requests:
              memory: 512Mi
              cpu: "0.5"
          readinessProbe:
            # initialDelaySeconds: 30
            # periodSeconds: 60
            # failureThreshold: 3
            httpGet:
              path: /healthcheck.html
              port: 80
              scheme: HTTP
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wordpress-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-storage
          persistentVolumeClaim:
            claimName: wp-pvc
